# public/api-docs/swagger.json
@@ -11,7 +11,10 @@
     {
       "name": "User",
       "description": "All User Operations"
-    }
+    },{
+          "name": "Home Page Data",
+          "description": "All Home Page Data"
+      }
   ],
   "paths": {
     "/auth/register": {
@@ -191,6 +194,30 @@
                       "required": true,
                       "type": "string"
                   }
+              ],
+              "responses": {
+                  "200": {
+                      "description": "Data"
+                  }
+              }
+          }
+      },"/getHomeData": {
+          "post": {
+              "tags": [
+                  "Home Page Data"
+              ],
+              "summary": "Home Page Data",
+              "operationId": "getHomeData",
+              "produces": [
+                  "application/json"
+              ],
+              "security": [
+                  {
+                      "APIKeyHeader": []
+                  }
+              ],
+              "parameters": [
+
               ],
               "responses": {
                   "200": {
